--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </figure>
 
                     <figure class="service-slide">
-            <img src="./Images/ent.jpg" alt="Hospital emergency care unit" loading="lazy">
+            <img src="./Images/pharmacy.jpg" alt="Hospital emergency care unit" loading="lazy">
             <figcaption>Emergency Care</figcaption>
           </figure>
 
