--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
   <!-- ================= HERO ================= -->
   <section class="hero">
     <div class="container">
-      <h2>Compassionate Care, Trusted Excellence</h2>
-      <p>Your health is our mission — always.</p>
+      <h2>Welcome to Our Lady Catholic Hospital Iseyin</h2>
+      <p>Compassionate Care, Trusted Excellence <br>
+         Your health is our mission — always.</p>
       <a href="appointment.html" class="btn btn--primary">Book Appointment</a>
     </div>
   </section>
