Updating service section

--- a/index.html
+++ b/index.html
@@ -61,43 +61,49 @@
         <div class="services-slider">
           <figure class="service-slide active">
             <img src="./Images/ent.jpg" alt="Hospital emergency care unit" loading="lazy">
-            <figcaption>Emergency Care</figcaption>
+            <figcaption>General consultation</figcaption>
           </figure>
 
           <figure class="service-slide">
             <img src="./Images/lab.jpg" alt="Cardiology department equipment" loading="lazy">
-            <figcaption>Cardiology</figcaption>
+            <figcaption>Child welfare clinic</figcaption>
           </figure>
 
           <figure class="service-slide">
             <img src="./Images/pat.jpg" alt="Pediatric medical care" loading="lazy">
-            <figcaption>Pediatrics</figcaption>
+            <figcaption>Laboratory</figcaption>
           </figure>
 
           <figure class="service-slide">
             <img src="./Images/pharmacy.jpg" alt="Medical laboratory diagnostics" loading="lazy">
-            <figcaption>Laboratory & Diagnostics</figcaption>
+            <figcaption>Ultrasound scan</figcaption>
           </figure>
 
-                    <figure class="service-slide">
+          <figure class="service-slide">
+            <img src="./Images/pharmacy.jpg" alt="Medical laboratory diagnostics" loading="lazy">
+            <figcaption>Physiotherapy</figcaption>
+          </figure>
+
+          <figure class="service-slide">
+            <img src="./Images/pharmacy.jpg" alt="Medical laboratory diagnostics" loading="lazy">
+            <figcaption>Cervical Cancer Screening</figcaption>
+          </figure>
+
+          <figure class="service-slide">
             <img src="./Images/pharmacy.jpg" alt="Hospital emergency care unit" loading="lazy">
-            <figcaption>Emergency Care</figcaption>
+            <figcaption>Hart to hart</figcaption>
           </figure>
 
           <figure class="service-slide">
             <img src="./Images/lab.jpg" alt="Cardiology department equipment" loading="lazy">
-            <figcaption>Cardiology</figcaption>
+            <figcaption>Surgeries</figcaption>
           </figure>
 
           <figure class="service-slide">
             <img src="./Images/pat.jpg" alt="Pediatric medical care" loading="lazy">
-            <figcaption>Pediatrics</figcaption>
+            <figcaption>Ambulance</figcaption>
           </figure>
 
-          <figure class="service-slide">
-            <img src="./Images/pharmacy.jpg" alt="Medical laboratory diagnostics" loading="lazy">
-            <figcaption>Laboratory & Diagnostics</figcaption>
-          </figure>
 
           <!-- Swipe indicators -->
           <div class="slider-dots" aria-label="Slide navigation"></div>
