--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="departments.html">Departments</a></li>
           <li><a href="news.html">News</a></li>
-          <li><a href="appointment.html">Appointment</a></li>
+          <!-- <li><a href="appointment.html">Appointment</a></li> -->
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
@@ -47,7 +47,7 @@
       <h2>Welcome to Our Lady Catholic Hospital Iseyin</h2>
       <p>Compassionate Care, Trusted Excellence <br>
          Your health is our mission — always.</p>
-      <a href="appointment.html" class="btn btn--primary">Book Appointment</a>
+      <!-- <a href="appointment.html" class="btn btn--primary">Book Appointment</a> -->
     </div>
   </section>
 
@@ -59,24 +59,23 @@
         <h2 id="services-title">Our Medical Services</h2>
 
         <div class="services-slider">
+
+
           <figure class="service-slide active">
             <img src="./Images/ent.jpg" alt="Hospital emergency care unit" loading="lazy">
             <figcaption>General consultation</figcaption>
           </figure>
 
           <figure class="service-slide">
-            <img src="./Images/lab.jpg" alt="Cardiology department equipment" loading="lazy">
-            <figcaption>Child welfare clinic</figcaption>
-          </figure>
-
-          <figure class="service-slide">
             <img src="./Images/pat.jpg" alt="Pediatric medical care" loading="lazy">
-            <figcaption>Laboratory</figcaption>
+            <figcaption>Ultrasound scan</figcaption>
+            <p class="figcaption-more-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, voluptate sit et alias nihil odit optio expedita cupiditate</p>
           </figure>
 
-          <figure class="service-slide">
-            <img src="./Images/pharmacy.jpg" alt="Medical laboratory diagnostics" loading="lazy">
-            <figcaption>Ultrasound scan</figcaption>
+            <figure class="service-slide">
+            <img src="./Images/ent.jpg" alt="Hospital emergency care unit" loading="lazy">
+            <figcaption>Laboratory</figcaption>
+            <p class="figcaption-more-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, voluptate sit et alias nihil odit optio expedita cupiditate</p>
           </figure>
 
           <figure class="service-slide">
