new image updates

--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 
 
           <figure class="service-slide active">
-            <img src="./Images/opd.jpg" alt="Hospital emergency care unit" loading="lazy">
+            <img src="./Images/thea.jpg" alt="Hospital emergency care unit" loading="lazy">
             <figcaption>General consultation</figcaption>
             <p class="figcaption-more-info">Your first step to better health. Professional care, personal attention.</p>
           </figure>
 
               <div class="CeoBox  service-slide">
                 <img 
-                src="./Images/scan.jpg" 
+                src="./Images/ent2.jpg" 
                 alt="Electronic and gas" 
                 class="CeoImg2"
                 loading="lazy">
@@ -84,7 +84,7 @@
 
               
           <div class="service-slide">
-            <img src="./Images/cervical.jpg" alt="Medical laboratory diagnostics" loading="lazy">
+            <img src="./Images/ent.jpg" alt="Medical laboratory diagnostics" loading="lazy">
             <p class="figcaption-more-info">
               Early screening saves lives.
               Your health, your future, protected.
