--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 
           <figure class="service-slide active">
-            <img src="./Images/thea.jpg" alt="Hospital emergency care unit" loading="lazy">
+            <img src="./Images/ent2.jpg" alt="Hospital emergency care unit" loading="lazy">
             <figcaption>General consultation</figcaption>
             <p class="figcaption-more-info">Your first step to better health. Professional care, personal attention.</p>
           </figure>
