Auto-type update

--- a/index.html
+++ b/index.html
@@ -43,12 +43,17 @@
 
   <!-- ================= HERO ================= -->
   <section class="hero">
-    <div class="container">
+    <div class="container2">
       <h2>Welcome to Our Lady Catholic Hospital Iseyin</h2>
       <p>Compassionate Care, Trusted Excellence <br>
          Your health is our mission — always.</p>
       <!-- <a href="appointment.html" class="btn btn--primary">Book Appointment</a> -->
     </div>
+
+    <div class="container3">
+    <!-- Single h1 for typing -->
+    <h1 class="type"></h1>
+  </div>
   </section>
 
   <main id="main-content">
@@ -146,6 +151,8 @@
       </div>
     </section>
 
+    
+
     <!-- ================= EMERGENCY ================= -->
     <section class="emergency" role="alert">
       <h2>24/7 Emergency Support</h2>
@@ -162,5 +169,6 @@
 
   <script src="./JS/nav.js"></script>
   <script src="./JS/slider.js"></script>
+  <script src="./JS/auto-type.js"></script>
 </body>
 </html>
